--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "ostream": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "Disabled"
+  "files.associations": {
+    "iostream": "cpp",
+    "ostream": "cpp",
+    "array": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "Disabled"
 }
